Add the ability to follow other users
Add a follow button to profiles that allows following.
Add a follows table in the database to record follows.
Limit the feed on the home page to posts from yourself and followers.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "dayjs": "^1.11.7"
+        "dayjs": "^1.11.7",
+        "qs": "^6.11.1"
     }
 }
