Update .env.example and README.md

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=social_app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=robotriffs
+DB_USERNAME=robotriffs
+DB_PASSWORD=robotriffs
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
