--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     },
     "dependencies": {
         "dayjs": "^1.11.7",
+        "laravel-echo": "^1.15.1",
         "pinia": "^2.0.33",
+        "pusher-js": "^8.0.2",
         "qs": "^6.11.1"
     }
 }
