--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ADMIN_USER_EMAIL=dev@robotriffs.com
 ADMIN_USER_PASSWORD=admin
+
+BUGSNAG_KEY=
+VITE_BUGSNAG_KEY="${BUGSNAG_KEY}"
