Import OneSignal Vue package

--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,9 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+ONESIGNAL_APP_ID=bfb41a5d-de68-436c-8e46-18ce8f00f44c
+VITE_ONESIGNAL_APP_ID="${ONESIGNAL_APP_ID}"
+
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
