--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@bugsnag/js": "^7.20.2",
         "@bugsnag/plugin-vue": "^7.19.0",
+        "@onesignal/onesignal-vue3": "^1.0.2",
         "dayjs": "^1.11.7",
         "laravel-echo": "^1.15.1",
         "pinia": "^2.0.33",
