Refine app icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "name": "Robot Riffs",
     "icons": [
         {
-            "src": "rough-icon-512.png",
+            "src": "icon-512x512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
