--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ DB_USERNAME=robotriffs
 DB_PASSWORD=robotriffs
 
 BROADCAST_DRIVER=log
+BROADCAST_NAMESPACE=dev.{yournamehere}
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -51,7 +52,7 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
-ONESIGNAL_APP_ID=bfb41a5d-de68-436c-8e46-18ce8f00f44c
+ONESIGNAL_APP_ID=
 VITE_ONESIGNAL_APP_ID="${ONESIGNAL_APP_ID}"
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
