Change broadcast driver to pusher in .env.example

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_DATABASE=robotriffs
 DB_USERNAME=robotriffs
 DB_PASSWORD=robotriffs
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 BROADCAST_NAMESPACE=dev.{yournamehere}
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
