--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build && vite build --ssr"
-    },
-    "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.2",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "@vue/server-renderer": "^3.2.31",
-        "autoprefixer": "^10.4.7",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.14",
-        "sass": "^1.32.12",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "vue": "^3.2.31"
-    },
-    "dependencies": {
-        "@bugsnag/js": "^7.20.2",
-        "@bugsnag/plugin-vue": "^7.19.0",
-        "@onesignal/onesignal-vue3": "^1.0.2",
-        "dayjs": "^1.11.7",
-        "laravel-echo": "^1.15.1",
-        "lodash-es": "^4.17.21",
-        "pinia": "^2.0.33",
-        "pusher-js": "^8.0.2",
-        "qs": "^6.11.1"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build && vite build --ssr"
+  },
+  "devDependencies": {
+    "@inertiajs/vue3": "^1.0.0",
+    "@playwright/test": "^1.35.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/server-renderer": "^3.2.31",
+    "autoprefixer": "^10.4.7",
+    "axios": "^1.1.2",
+    "laravel-vite-plugin": "^0.7.2",
+    "postcss": "^8.4.14",
+    "sass": "^1.32.12",
+    "tailwindcss": "^3.1.0",
+    "vite": "^4.0.0",
+    "vue": "^3.2.31"
+  },
+  "dependencies": {
+    "@bugsnag/js": "^7.20.2",
+    "@bugsnag/plugin-vue": "^7.19.0",
+    "@onesignal/onesignal-vue3": "^1.0.2",
+    "dayjs": "^1.11.7",
+    "laravel-echo": "^1.15.1",
+    "lodash-es": "^4.17.21",
+    "pinia": "^2.0.33",
+    "pusher-js": "^8.0.2",
+    "qs": "^6.11.1"
+  }
 }
