--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vite build --ssr"
+    "build": "vite build && vite build --ssr",
+    "test": "npx playwright test"
   },
   "devDependencies": {
     "@inertiajs/vue3": "^1.0.0",
